--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,7 +18,7 @@ jobs:
       - name: install newman 
         run: |
           npm install -g newman
-          npm install -g newman-report-htmlextra
+          npm install -g newman-reporter-htmlextra
 
       - name: Run Test
         run: newman run ServeRest.postman_collection.json -e serveRest_env.postman_environment.json -r htmlextra
